// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser parses BETWEEN expression 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "loc": Object {
              "end": 9,
              "start": 6,
            },
            "text": "age",
            "type": "identifier",
          },
          Object {
            "and": Object {
              "loc": Object {
                "end": 24,
                "start": 21,
              },
              "raw": "AND",
              "text": "AND",
              "tokenType": "AND",
              "type": "keyword",
            },
            "between": Object {
              "loc": Object {
                "end": 17,
                "start": 10,
              },
              "raw": "BETWEEN",
              "text": "BETWEEN",
              "tokenType": "BETWEEN",
              "type": "keyword",
            },
            "expr1": Array [
              Object {
                "loc": Object {
                  "end": 20,
                  "start": 18,
                },
                "text": "18",
                "type": "literal",
              },
            ],
            "expr2": Array [
              Object {
                "loc": Object {
                  "end": 27,
                  "start": 25,
                },
                "text": "63",
                "type": "literal",
              },
            ],
            "loc": Object {
              "end": 27,
              "start": 10,
            },
            "type": "between_predicate",
          },
        ],
        "loc": Object {
          "end": 27,
          "start": 0,
        },
        "name": Object {
          "loc": Object {
            "end": 5,
            "start": 0,
          },
          "raw": "WHERE",
          "text": "WHERE",
          "tokenType": "RESERVED_COMMAND",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": false,
    "loc": Object {
      "end": Infinity,
      "start": 0,
    },
    "type": "statement",
  },
]
`;

exports[`Parser parses LIMIT clause with count 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "count": Array [
          Object {
            "loc": Object {
              "end": 8,
              "start": 6,
            },
            "text": "15",
            "type": "literal",
          },
        ],
        "loc": Object {
          "end": 8,
          "start": 0,
        },
        "name": Object {
          "loc": Object {
            "end": 5,
            "start": 0,
          },
          "raw": "LIMIT",
          "text": "LIMIT",
          "tokenType": "LIMIT",
          "type": "keyword",
        },
        "type": "limit_clause",
      },
    ],
    "hasSemicolon": true,
    "loc": Object {
      "end": 9,
      "start": 0,
    },
    "type": "statement",
  },
]
`;

exports[`Parser parses LIMIT clause with longer expressions 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "count": Array [
          Object {
            "loc": Object {
              "end": 16,
              "start": 15,
            },
            "text": "3",
            "type": "literal",
          },
          Object {
            "loc": Object {
              "end": 18,
              "start": 17,
            },
            "text": "*",
            "type": "operator",
          },
          Object {
            "loc": Object {
              "end": 20,
              "start": 19,
            },
            "text": "2",
            "type": "literal",
          },
        ],
        "loc": Object {
          "end": 20,
          "start": 0,
        },
        "name": Object {
          "loc": Object {
            "end": 5,
            "start": 0,
          },
          "raw": "LIMIT",
          "text": "LIMIT",
          "tokenType": "LIMIT",
          "type": "keyword",
        },
        "offset": Array [
          Object {
            "loc": Object {
              "end": 8,
              "start": 6,
            },
            "text": "50",
            "type": "literal",
          },
          Object {
            "loc": Object {
              "end": 10,
              "start": 9,
            },
            "text": "+",
            "type": "operator",
          },
          Object {
            "loc": Object {
              "end": 13,
              "start": 11,
            },
            "text": "50",
            "type": "literal",
          },
        ],
        "type": "limit_clause",
      },
    ],
    "hasSemicolon": true,
    "loc": Object {
      "end": 21,
      "start": 0,
    },
    "type": "statement",
  },
]
`;

exports[`Parser parses LIMIT clause with offset and count 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "count": Array [
          Object {
            "loc": Object {
              "end": 13,
              "start": 11,
            },
            "text": "15",
            "type": "literal",
          },
        ],
        "loc": Object {
          "end": 13,
          "start": 0,
        },
        "name": Object {
          "loc": Object {
            "end": 5,
            "start": 0,
          },
          "raw": "LIMIT",
          "text": "LIMIT",
          "tokenType": "LIMIT",
          "type": "keyword",
        },
        "offset": Array [
          Object {
            "loc": Object {
              "end": 9,
              "start": 6,
            },
            "text": "100",
            "type": "literal",
          },
        ],
        "type": "limit_clause",
      },
    ],
    "hasSemicolon": true,
    "loc": Object {
      "end": 14,
      "start": 0,
    },
    "type": "statement",
  },
]
`;

exports[`Parser parses SELECT * 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "loc": Object {
              "end": 8,
              "start": 7,
            },
            "type": "all_columns_asterisk",
          },
        ],
        "loc": Object {
          "end": 8,
          "start": 0,
        },
        "name": Object {
          "loc": Object {
            "end": 6,
            "start": 0,
          },
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": false,
    "loc": Object {
      "end": Infinity,
      "start": 0,
    },
    "type": "statement",
  },
]
`;

exports[`Parser parses SELECT ident.* 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "loc": Object {
              "end": 14,
              "start": 7,
            },
            "object": Object {
              "loc": Object {
                "end": 12,
                "start": 7,
              },
              "text": "ident",
              "type": "identifier",
            },
            "property": Object {
              "loc": Object {
                "end": 14,
                "start": 13,
              },
              "type": "all_columns_asterisk",
            },
            "type": "property_access",
          },
        ],
        "loc": Object {
          "end": 14,
          "start": 0,
        },
        "name": Object {
          "loc": Object {
            "end": 6,
            "start": 0,
          },
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": false,
    "loc": Object {
      "end": Infinity,
      "start": 0,
    },
    "type": "statement",
  },
]
`;

exports[`Parser parses array subscript 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "array": Object {
              "loc": Object {
                "end": 15,
                "start": 7,
              },
              "text": "my_array",
              "type": "identifier",
            },
            "loc": Object {
              "end": 18,
              "start": 7,
            },
            "parenthesis": Object {
              "children": Array [
                Object {
                  "loc": Object {
                    "end": 17,
                    "start": 16,
                  },
                  "text": "5",
                  "type": "literal",
                },
              ],
              "closeParen": "]",
              "loc": Object {
                "end": 18,
                "start": 15,
              },
              "openParen": "[",
              "type": "parenthesis",
            },
            "type": "array_subscript",
          },
        ],
        "loc": Object {
          "end": 18,
          "start": 0,
        },
        "name": Object {
          "loc": Object {
            "end": 6,
            "start": 0,
          },
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": false,
    "loc": Object {
      "end": Infinity,
      "start": 0,
    },
    "type": "statement",
  },
]
`;

exports[`Parser parses curly braces 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "loc": Object {
                  "end": 11,
                  "start": 8,
                },
                "text": "foo",
                "type": "identifier",
              },
              Object {
                "loc": Object {
                  "end": 12,
                  "start": 11,
                },
                "text": ":",
                "type": "operator",
              },
              Object {
                "loc": Object {
                  "end": 16,
                  "start": 13,
                },
                "text": "bar",
                "type": "identifier",
              },
            ],
            "closeParen": "}",
            "loc": Object {
              "end": 17,
              "start": 7,
            },
            "openParen": "{",
            "type": "parenthesis",
          },
        ],
        "loc": Object {
          "end": 17,
          "start": 0,
        },
        "name": Object {
          "loc": Object {
            "end": 6,
            "start": 0,
          },
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": true,
    "loc": Object {
      "end": 18,
      "start": 0,
    },
    "type": "statement",
  },
]
`;

exports[`Parser parses function call 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "loc": Object {
              "end": 14,
              "start": 7,
            },
            "name": Object {
              "loc": Object {
                "end": 11,
                "start": 7,
              },
              "raw": "sqrt",
              "text": "SQRT",
              "tokenType": "RESERVED_FUNCTION_NAME",
              "type": "keyword",
            },
            "parenthesis": Object {
              "children": Array [
                Object {
                  "loc": Object {
                    "end": 13,
                    "start": 12,
                  },
                  "text": "2",
                  "type": "literal",
                },
              ],
              "closeParen": ")",
              "loc": Object {
                "end": 14,
                "start": 11,
              },
              "openParen": "(",
              "type": "parenthesis",
            },
            "type": "function_call",
          },
        ],
        "loc": Object {
          "end": 14,
          "start": 0,
        },
        "name": Object {
          "loc": Object {
            "end": 6,
            "start": 0,
          },
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": false,
    "loc": Object {
      "end": Infinity,
      "start": 0,
    },
    "type": "statement",
  },
]
`;

exports[`Parser parses function name with and without parameters 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "loc": Object {
              "end": 19,
              "start": 7,
            },
            "raw": "CURRENT_TIME",
            "text": "CURRENT_TIME",
            "tokenType": "RESERVED_KEYWORD",
            "type": "keyword",
          },
          Object {
            "loc": Object {
              "end": 21,
              "start": 20,
            },
            "text": "a",
            "type": "identifier",
          },
          Object {
            "loc": Object {
              "end": 22,
              "start": 21,
            },
            "type": "comma",
          },
          Object {
            "loc": Object {
              "end": 37,
              "start": 23,
            },
            "name": Object {
              "loc": Object {
                "end": 35,
                "start": 23,
              },
              "raw": "CURRENT_TIME",
              "text": "CURRENT_TIME",
              "tokenType": "RESERVED_FUNCTION_NAME",
              "type": "keyword",
            },
            "parenthesis": Object {
              "children": Array [],
              "closeParen": ")",
              "loc": Object {
                "end": 37,
                "start": 35,
              },
              "openParen": "(",
              "type": "parenthesis",
            },
            "type": "function_call",
          },
          Object {
            "loc": Object {
              "end": 39,
              "start": 38,
            },
            "text": "b",
            "type": "identifier",
          },
        ],
        "loc": Object {
          "end": 39,
          "start": 0,
        },
        "name": Object {
          "loc": Object {
            "end": 6,
            "start": 0,
          },
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": true,
    "loc": Object {
      "end": 40,
      "start": 0,
    },
    "type": "statement",
  },
]
`;

exports[`Parser parses list of statements 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "loc": Object {
          "end": 3,
          "start": 0,
        },
        "text": "foo",
        "type": "identifier",
      },
    ],
    "hasSemicolon": true,
    "loc": Object {
      "end": 4,
      "start": 0,
    },
    "type": "statement",
  },
  Object {
    "children": Array [
      Object {
        "loc": Object {
          "end": 8,
          "start": 5,
        },
        "text": "bar",
        "type": "identifier",
      },
    ],
    "hasSemicolon": false,
    "loc": Object {
      "end": Infinity,
      "start": 5,
    },
    "type": "statement",
  },
]
`;

exports[`Parser parses parenthesized expressions 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "loc": Object {
                  "end": 18,
                  "start": 8,
                },
                "text": "birth_year",
                "type": "identifier",
              },
              Object {
                "loc": Object {
                  "end": 20,
                  "start": 19,
                },
                "text": "-",
                "type": "operator",
              },
              Object {
                "children": Array [
                  Object {
                    "loc": Object {
                      "end": 34,
                      "start": 22,
                    },
                    "text": "CURRENT_DATE",
                    "type": "identifier",
                  },
                  Object {
                    "loc": Object {
                      "end": 36,
                      "start": 35,
                    },
                    "text": "+",
                    "type": "operator",
                  },
                  Object {
                    "loc": Object {
                      "end": 38,
                      "start": 37,
                    },
                    "text": "1",
                    "type": "literal",
                  },
                ],
                "closeParen": ")",
                "loc": Object {
                  "end": 39,
                  "start": 21,
                },
                "openParen": "(",
                "type": "parenthesis",
              },
            ],
            "closeParen": ")",
            "loc": Object {
              "end": 40,
              "start": 7,
            },
            "openParen": "(",
            "type": "parenthesis",
          },
        ],
        "loc": Object {
          "end": 40,
          "start": 0,
        },
        "name": Object {
          "loc": Object {
            "end": 6,
            "start": 0,
          },
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": false,
    "loc": Object {
      "end": Infinity,
      "start": 0,
    },
    "type": "statement",
  },
]
`;

exports[`Parser parses qualified.identifier.sequence 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "loc": Object {
              "end": 18,
              "start": 7,
            },
            "object": Object {
              "loc": Object {
                "end": 14,
                "start": 7,
              },
              "object": Object {
                "loc": Object {
                  "end": 10,
                  "start": 7,
                },
                "text": "foo",
                "type": "identifier",
              },
              "property": Object {
                "loc": Object {
                  "end": 14,
                  "start": 11,
                },
                "text": "bar",
                "type": "identifier",
              },
              "type": "property_access",
            },
            "property": Object {
              "loc": Object {
                "end": 18,
                "start": 15,
              },
              "text": "baz",
              "type": "identifier",
            },
            "type": "property_access",
          },
        ],
        "loc": Object {
          "end": 18,
          "start": 0,
        },
        "name": Object {
          "loc": Object {
            "end": 6,
            "start": 0,
          },
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": true,
    "loc": Object {
      "end": 19,
      "start": 0,
    },
    "type": "statement",
  },
]
`;

exports[`Parser parses set operations 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "loc": Object {
              "end": 10,
              "start": 7,
            },
            "text": "foo",
            "type": "identifier",
          },
        ],
        "loc": Object {
          "end": 10,
          "start": 0,
        },
        "name": Object {
          "loc": Object {
            "end": 6,
            "start": 0,
          },
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
      Object {
        "children": Array [
          Object {
            "loc": Object {
              "end": 19,
              "start": 16,
            },
            "text": "bar",
            "type": "identifier",
          },
        ],
        "loc": Object {
          "end": 19,
          "start": 11,
        },
        "name": Object {
          "loc": Object {
            "end": 15,
            "start": 11,
          },
          "raw": "FROM",
          "text": "FROM",
          "tokenType": "RESERVED_COMMAND",
          "type": "keyword",
        },
        "type": "clause",
      },
      Object {
        "children": Array [],
        "loc": Object {
          "end": 29,
          "start": 20,
        },
        "name": Object {
          "loc": Object {
            "end": 29,
            "start": 20,
          },
          "raw": "UNION ALL",
          "text": "UNION ALL",
          "tokenType": "RESERVED_SET_OPERATION",
          "type": "keyword",
        },
        "type": "set_operation",
      },
      Object {
        "children": Array [
          Object {
            "loc": Object {
              "end": 40,
              "start": 37,
            },
            "text": "foo",
            "type": "identifier",
          },
        ],
        "loc": Object {
          "end": 40,
          "start": 30,
        },
        "name": Object {
          "loc": Object {
            "end": 36,
            "start": 30,
          },
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
      Object {
        "children": Array [
          Object {
            "loc": Object {
              "end": 49,
              "start": 46,
            },
            "text": "baz",
            "type": "identifier",
          },
        ],
        "loc": Object {
          "end": 49,
          "start": 41,
        },
        "name": Object {
          "loc": Object {
            "end": 45,
            "start": 41,
          },
          "raw": "FROM",
          "text": "FROM",
          "tokenType": "RESERVED_COMMAND",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": false,
    "loc": Object {
      "end": Infinity,
      "start": 0,
    },
    "type": "statement",
  },
]
`;

exports[`Parser parses square brackets 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "loc": Object {
                  "end": 9,
                  "start": 8,
                },
                "text": "1",
                "type": "literal",
              },
              Object {
                "loc": Object {
                  "end": 10,
                  "start": 9,
                },
                "type": "comma",
              },
              Object {
                "loc": Object {
                  "end": 12,
                  "start": 11,
                },
                "text": "2",
                "type": "literal",
              },
              Object {
                "loc": Object {
                  "end": 13,
                  "start": 12,
                },
                "type": "comma",
              },
              Object {
                "loc": Object {
                  "end": 15,
                  "start": 14,
                },
                "text": "3",
                "type": "literal",
              },
            ],
            "closeParen": "]",
            "loc": Object {
              "end": 16,
              "start": 7,
            },
            "openParen": "[",
            "type": "parenthesis",
          },
        ],
        "loc": Object {
          "end": 16,
          "start": 0,
        },
        "name": Object {
          "loc": Object {
            "end": 6,
            "start": 0,
          },
          "raw": "SELECT",
          "text": "SELECT",
          "tokenType": "RESERVED_SELECT",
          "type": "keyword",
        },
        "type": "clause",
      },
    ],
    "hasSemicolon": true,
    "loc": Object {
      "end": 17,
      "start": 0,
    },
    "type": "statement",
  },
]
`;
